# Team-03-2-facade-panels

./: .env.example  .gitignore  Dockerfile  README.md  Team03.2 Final Assignment.gh  elenicurves  elenipy  example.function_inputs.json  example.function_inputs.json.patched.json  functionSchema.json  main.py  pyproject.toml  pytest.ini
assets/: Team03.2 Final Assignment.gh  Team03.2_Final_Assignment.gh  test_minimal.gh  test_minimal.ghx
lines/: lines.py  twisty.3dm
tests/: confest.py  test_function.py  test_layer_filter.py  test_local.py
