[project]
name = "speckle-automate-function"
version = "0.1.0"
requires-python = ">=3.11"
description = "Facade panel generator: curves → Rhino Compute → mesh panels"
readme = "README.md"
license = "Apache-2.0"
keywords = ["speckle", "automate", "rhino", "grasshopper", "facade", "aec"]

dependencies = [
    "specklepy==3.1.0",
    "rhino3dm==8.17.0",
    "compute-rhino3d==0.12.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "pytest==7.4.4",
    "ruff==0.15.9",
]

[tool.ruff]
exclude = [".venv", "**/*.yml"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "D",  # pydocstyle
    "I",  # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
py-modules = []